--- a/scc-mvc/src/main/resources/templates/login.html
+++ b/scc-mvc/src/main/resources/templates/login.html
@@ -1,182 +1,131 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-  <head >
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>Random Login Form</title>
+    <title>Social Customer Care</title>
 
 
 
+    <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic'>
 
-        <style>
-      /* NOTE: The styles were added inline because Prefixfree needs access to your styles and they must be inlined if they are on local disk! */
-      @import url(http://fonts.googleapis.com/css?family=Exo:100,200,400);
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
 
-body{
-	margin: 0;
-	padding: 0;
-	background: #fff;
 
-	color: #fff;
-	font-family: Arial;
-	font-size: 12px;
-}
+    <style>
+        body {
+            background: #ECF0F5;
+            color: #666666;
+            font-family: 'RobotoDraft', 'Roboto', sans-serif;
+            font-size: 14px;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
 
-.body{
-	position: absolute;
-	top: -20px;
-	left: -20px;
-	right: -40px;
-	bottom: -40px;
-	width: auto;
-	height: auto;
-	background-image: url(http://ginva.com/wp-content/uploads/2012/07/city-skyline-wallpapers-008.jpg);
-	background-size: cover;
-	-webkit-filter: blur(5px);
-	z-index: 0;
-}
+        /* Pen Title */
+        .pen-title {
+            padding: 70px 10px 5px;
+            text-align: center;
+            letter-spacing: 2px;
+        }
+        .pen-title h1 {
+            margin: 0 0 10px;
+            font-size: 48px;
+            font-weight: 300;
+        }
+        .pen-title span {
+            font-size: 12px;
+        }
+        .pen-title span a {
+            color: #33b5e5;
+            font-weight: 600;
+            text-decoration: none;
+        }
 
-.grad{
-	position: absolute;
-	top: -20px;
-	left: -20px;
-	right: -40px;
-	bottom: -40px;
-	width: auto;
-	height: auto;
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
-	z-index: 1;
-	opacity: 0.7;
-}
+        /* Form Module */
+        .form-module {
+            position: relative;
+            background: #ffffff;
+            max-width: 320px;
+            width: 100%;
+            border-top: 5px solid #33b5e5;
+            box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+            margin: 0 auto;
+        }
 
-.header{
-	position: absolute;
-	top: calc(50% - 35px);
-	left: calc(40% - 255px);
-	z-index: 2;
-}
 
-.header div{
-	float: left;
-	color: #fff;
-	font-family: 'Exo', sans-serif;
-	font-size: 35px;
-	font-weight: 200;
-}
 
-.header div span{
-	color: #5379fa !important;
-}
+        .form-module .form {
 
-.login{
-	position: absolute;
-	top: calc(50% - 75px);
-	left: calc(50% - 50px);
-	height: 150px;
-	width: 350px;
-	padding: 10px;
-	z-index: 2;
-}
+            padding: 40px;
+        }
+        .form-module .form:nth-child(2) {
+            display: block;
+        }
+        .form-module h2 {
+            margin: 0 0 20px;
+            color:  #178ab4;
+            font-size: 20px;
+            font-weight: 400;
+            line-height: 1;
+        }
+        .form-module input {
+            outline: none;
+            display: block;
+            width: 100%;
+            border: 1px solid #d9d9d9;
+            margin: 0 0 20px;
+            padding: 10px 15px;
+            box-sizing: border-box;
+            font-wieght: 400;
+            -webkit-transition: 0.3s ease;
+            transition: 0.3s ease;
+        }
+        .form-module input:focus {
+            border: 1px solid #33b5e5;
+            color: #333333;
+        }
+        .form-module button {
+            cursor: pointer;
+            background: #3C8DBC;
+            width: 100%;
+            border: 0;
+            padding: 10px 15px;
+            color: #ffffff;
+            -webkit-transition: 0.3s ease;
+            transition: 0.3s ease;
+        }
+        .form-module button:hover {
+            background: #178ab4;
+        }
 
-.login input[type=text]{
-	width: 250px;
-	height: 30px;
-	background: transparent;
-	border: 1px solid rgba(255,255,255,0.6);
-	border-radius: 2px;
-	color: #fff;
-	font-family: 'Exo', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	padding: 4px;
-}
 
-.login input[type=password]{
-	width: 250px;
-	height: 30px;
-	background: transparent;
-	border: 1px solid rgba(255,255,255,0.6);
-	border-radius: 2px;
-	color: #fff;
-	font-family: 'Exo', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	padding: 4px;
-	margin-top: 10px;
-}
-
-.login input[type=submit]{
-	width: 260px;
-	height: 35px;
-	background: #fff;
-	border: 1px solid #fff;
-	cursor: pointer;
-	border-radius: 2px;
-	color: #a18d6c;
-	font-family: 'Exo', sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	padding: 6px;
-	margin-top: 10px;
-}
-
-.login input[type=submit]:hover{
-	opacity: 0.8;
-}
-
-.login input[type=submit]:active{
-	opacity: 0.6;
-}
-
-.login input[type=text]:focus{
-	outline: none;
-	border: 1px solid rgba(255,255,255,0.9);
-}
-
-.login input[type=password]:focus{
-	outline: none;
-	border: 1px solid rgba(255,255,255,0.9);
-}
-
-.login input[type=submit]:focus{
-	outline: none;
-}
-
-::-webkit-input-placeholder{
-   color: rgba(255,255,255,0.6);
-}
-
-::-moz-input-placeholder{
-   color: rgba(255,255,255,0.6);
-}
     </style>
 
 
-        <script src="static/js/prefixfree.min.js"></script>
+    <script src="static/js/prefixfree.min.js"></script>
 
 
+</head>
 
-  </head>
+<body>
 
-  <body>
+<div class="pen-title">
+    <h1><b>Social</b> Customer Care</h1>
+</div>
+<!-- Form Module-->
+<div class="module form-module">
 
-    <div class="body"></div>
-		<div class="grad"></div>
-		<div class="header">
-			<div>Socical Customer<span>Care</span></div>
-		</div>
-		<div class="login">
-            <form action="doLogin" method="post">
-                <input type="text" placeholder="username" name="txtUsername"/>
-                <input type="password" placeholder="password" name="txtPassword"/>
-                <input type="submit" value="Login"/>
-            </form>
-
-		</div>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
+    <div class="form">
+        <h2>Login to your account</h2>
+        <form action="doLogin" method="post">
+            <input type="text" name="txtUsername" placeholder="Username"/>
+            <input type="password" name="txtPassword" placeholder="Password"/>
+                <button>Login</button>
+        </form>
+    </div>
 
 
+</div>
 
-  </body>
+
+</body>
 </html>
