--- a/scc-mvc/src/main/resources/static/css/scc-post.css
+++ b/scc-mvc/src/main/resources/static/css/scc-post.css
@@ -192,7 +192,11 @@
   color: #50D050
 }
 
-
+.question
+{
+  font-size: 20px;
+  color: #FFD700;
+}
 /* PAGE LIST SELECTED*/
 .page-selected {
   border: 1px solid cornflowerblue;
