test with nguyen

--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -55,6 +55,7 @@
 </html>
 <script>
 
+    //current page Id
     var currentPageId = "0";
     var currentCustomer = "0";
     var currentPageNum = 0;
